abm_level can be set with panel_power_savings for an OLED display
Brief summary of the problem:
With kernel 6.9 the
/sys/class/drm/card1-eDP-1/amdgpu/panel_power_savings
is available and the power-profiles-daemon (or something else) changes it causing weird colors on the OLED display.
This affects the balanced and power-saving modes.
Hardware description:
- CPU: AMD Ryzen™ 7 6800U
- GPU: 33:00.0 VGA compatible controller [0300]: Advanced Micro Devices, Inc. [AMD/ATI] Rembrandt [Radeon 680M] [1002:1681] (rev c1)
- System Memory: 16GB
- Display(s): | 14" | 2.8K (2880x1800) | Multi-touch | OLED | 400nits | Glossy | 16:10 | 100,000:1 | 100% DCI-P3 | 90Hz (Max) | 87.5°/87.5°/87.5°/87.5° | Above 90% screen-to-body ratio, Dolby® Vision, TÜV Low Blue Light (Hardware), VESA DisplayHDR™ True Black 500
- Type of Display Connection: eDP
System information:
- Distro name and Version: Fedora 40
- Kernel version: 6.9.0-rc7+
- Custom kernel: latest kernel from Torvalds tree